--- a/css/main.css
+++ b/css/main.css
@@ -2535,3 +2535,16 @@ h2.title {
 	bottom: 0;
 	right: 0;
 }
+/* Other ratios */
+.ratio2_1:before{
+	padding-top: 50%;
+}
+.ratio1_2:before{
+	padding-top: 200%;
+}
+.ratio4_3:before{
+	padding-top: 75%;
+}
+.ratio16_9:before{
+	padding-top: 56.25%;
+}
