--- a/css/main.css
+++ b/css/main.css
@@ -1293,7 +1293,7 @@ h2.title {
 
 
 .shop-details-tab {
-  border: 1px solid #F7F7F0;
+  /* border: 1px solid #F7F7F0; */
   margin-bottom: 75px;
   margin-left: 15px;
   margin-right: 15px;
